--- a/style.css
+++ b/style.css
@@ -473,13 +473,12 @@ hr {
   margin: 20px 0 0 0;
 }
 
-/* things to hide */
 .header-menu {
   display: none;
 }
 
 /* dont change things above this mark */
-@media (min-width: 1440px) {
+@media (min-width: 992px) {
 
   .header1{
     height: 72px;
@@ -487,9 +486,8 @@ hr {
   header {
     display: flex;
     justify-content: space-between;
-    
     margin: 0 154px 0 154px;
-    padding: 26px 0 0 0;
+    padding: 20px 0 0 0;
   }
 
   .company {
@@ -526,6 +524,10 @@ hr {
 
   /* Presentation-introduction */
 
+  .container-main {
+    height: 870px;
+    
+  }
   .presentation1 {
     background-color: #1c1a19;
     background-image: url("images/background-desktop.svg");
@@ -534,14 +536,12 @@ hr {
   }
 
   .presentation {
-    border: red dashed 1px;
     width: 530px;
     background-image: none;
     background-color: transparent;
-    margin: 0 0 0 140px;
+    margin: 0 0 0 12%;
 
-    
-  
+    border: purple 2px dashed;
   }
 
   .presentation > h1 {
@@ -550,7 +550,8 @@ hr {
     font-weight: normal;
     font-size: 72px;
     line-height: 81px;
-    margin: 70px 0 0 0;
+    margin: 70px 0 24px 0;
+    color: #F55800;
   }
 
   .presentation > h4 {
@@ -559,6 +560,8 @@ hr {
     font-weight: 500;
     font-size: 32px;
     line-height: 44px;
+    margin: 0 0 24px 0;
+    color: #fff;
   }
 
   .presentation > p {
@@ -567,6 +570,7 @@ hr {
     font-weight: normal;
     font-size: 20px;
     line-height: 32px;
+    color: #F4F5F7;
   }
 
   .icons {
@@ -574,6 +578,30 @@ hr {
     flex-direction: column;
     position: relative;
     right: 70px;
-    margin: -200px 0 0 0;
+    margin: -55% 0 0 0;
+  }
+
+  .icons > li {
+    margin: 0 0 20px 0;
+  }
+
+  .container-mega {
+    display: grid;
+    grid-template-columns: 1;
+    grid-template-rows: .20fr 1fr;
+  }
+
+  .division {
+    margin: 0 12% 0 12%;
+  }
+
+  .title-container {
+    display: flex;
+    justify-content: space-between;
+
+  }
+
+  .line-image {
+    width: 60%;
   }
 }
