--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header > i {
 .previous-works-container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 88px;
+  grid-gap: 30px;
 }
 
 .card-row1 {
@@ -168,6 +168,7 @@ header > i {
   margin: 24px 24px 0 24px;
   background-image: url("images/card-image/u-image-card.svg");
   background-repeat: no-repeat;
+  border: 2px solid black;
 }
 
 .u-card-h3 {
@@ -216,7 +217,7 @@ header > i {
   line-height: 24px;
   color: #ffff;
   border: none;
-  width: 327px;
+  width: 100%;
   height: 48px;
   margin: 24px 0 0 0;
   background-color: #ff6b00;
@@ -597,6 +598,7 @@ hr {
     display: grid;
     grid-template-columns: 1;
     grid-template-rows: .20fr 1fr;
+    
   }
 
   .division {
@@ -608,12 +610,14 @@ hr {
   .test-div {
     border: 3px dashed rgb(175, 216, 25);
     margin: 0 3% 0 0;
+
   }
   .title-container {
     display: flex;
     justify-content: space-between;
     padding: 0 0 0 0;
     margin: 0 0 3.5% 0;
+
   }
 
   .internal-title {
@@ -628,19 +632,31 @@ hr {
     width: 66%;
   }
 
+  .previous-works-container {
+    margin: 2px 0 0 0;
+
+  }
+
   .card-row1 {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin: 0 0 0 5% ;
+    grid-template-columns: 1.5fr 1fr;
     border: 3px dashed pink;
   }
 .container-info-card1 {
   border: dashed red 2px;
 }
+
+.multipost-div {
+  border:2px dashed purple;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 85%;
+}
   
   .card-img-size {
     margin: 0 24px 0 0;
-    width: 684px;
+    width: 100%;
     height: 100%;
   }
 
@@ -662,6 +678,8 @@ hr {
     font-weight: normal;
     font-size: 20px;
     line-height: 28px;
+  margin: 0 0 0 0;
+
   }
 
   .technologies-card1 {
@@ -681,14 +699,35 @@ hr {
   }
 
   .card-row2{
-    border: red 3px dashed;
+    /* border: red 3px dashed; */
     background-size: 100%;
+    background-image: url("images/card-image/card-image-desk/card-2.png");
+    background-position: center bottom;
+
   }
 
+  .u-button-card {
+    position: relative;
+    top: 19.30em;
+    height: 58px;
+  }
+  .have2-hidden {
+    display: none;
+  }
 
   .card-row3{
     border: red 3px dashed;
+    background-image: url("images/card-image/card-image-desk/calendar.png");
   }
+
+  .u-card-h3 {
+    font-family: "Crete Round", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 32px;
+    line-height: 44px;
+  }
+
 
   .card-row4{
     border: rgb(0, 255, 13) 3px dashed;
