--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ header > i {
   border: none;
   width: 100%;
   height: 48px;
-  margin: 24px 0 0 0;
+  margin: 30px 0 0 0;
   background-color: #ff6b00;
 }
 
@@ -482,8 +482,22 @@ hr {
   display: none;
 }
 
+
+
+@media (max-width: 375px) {
+  .hidden-375 {
+    display: none;
+  }
+
+}
+
+
 /* dont change things above this mark */
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
+
+  .have2-hidden {
+    display: none;
+  }
 
   .header1{
     height: 72px;
@@ -531,10 +545,8 @@ hr {
     display: none;
   }
 
-  /* Presentation-introduction */
-
   .container-main {
-    height: 870px;
+    /* height: 870px; */
     
   }
   .presentation1 {
@@ -549,8 +561,6 @@ hr {
     background-image: none;
     background-color: transparent;
     margin: 0 0 0 12%;
-
-    border: purple 2px dashed;
   }
 
   .presentation > h1 {
@@ -594,31 +604,14 @@ hr {
     margin: 0 0 20px 0;
   }
 
-  .container-mega {
-    display: grid;
-    grid-template-columns: 1;
-    grid-template-rows: .20fr 1fr;
-    
-  }
-
-  .division {
-   
-    border: dashed 2px palegoldenrod;
-    
-  }
-
   .test-div {
-    border: 3px dashed rgb(216, 38, 25);
-    margin: 0 5% 0 5%;
-
+    margin: 5% 5% 0 5%;
   }
 
   .title-container {
     display: flex;
     justify-content: space-between;
-    padding: 0 0 0 0;
-    margin: 0 0 3.5% 0;
-
+    padding: 0 0 4% 0;
   }
 
   .internal-title {
@@ -630,26 +623,16 @@ hr {
   }
 
   .line-image {
-    width: 70%;
-  }
-
-  .previous-works-container {
-    margin: 2px 0 0 0;
-
+    width: 66%;
   }
 
   .card-row1 {
     display: grid;
     grid-template-columns: 1.5fr 1fr;
-    border: 3px dashed pink;
     margin: 0 5% 0 5%;
   }
-.container-info-card1 {
-  border: dashed red 2px;
-}
 
 .multipost-div {
-  border:2px dashed purple;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -693,7 +676,6 @@ hr {
 
   .container-grid-pworks {
     margin: 0 0 0 4%;
-    border: palegoldenrod 3px dashed;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 37px 24px;
@@ -709,15 +691,12 @@ hr {
 
   .u-button-card {
     position: relative;
-    top: 19.30em;
+    top: 19em;
     height: 58px;
   }
-  .have2-hidden {
-    display: none;
-  }
+  
 
   .card-row3{
-    border: red 3px dashed;
     background-position: center bottom;
     background-size: 110%;
     background-image: url("images/card-image/card-image-desk/calendar.png");
@@ -745,14 +724,10 @@ font-size: 17px;
 line-height: 24px;
   }
 
-
   .card-row4{
-    border: rgb(0, 255, 13) 3px dashed;
     background-position: center bottom;
     background-size: 110%;
     background-image: url("images/card-image/card-image-desk/arco.png");
-    
-
   }
 
   .inner-universal-div-1line {
@@ -760,23 +735,19 @@ line-height: 24px;
     top: 7em;
   }
 
-
   .card-row5{
-    border: red 3px dashed;
     background-position: center bottom;
     background-size: 110%;
     background-image: url("images/card-image/card-image-desk/card2-shadow.png");
   }
 
   .card-row6{
-    border: red 3px dashed;
     background-position: center bottom;
     background-size: 110%;
     background-image: url("images/card-image/card-image-desk/calendar.png");
   }
 
   .card-row7{
-    border: red 3px dashed;
     background-position: center bottom;
     background-size: 110%;
 
@@ -784,15 +755,12 @@ line-height: 24px;
   }
 
   .about-me-introduction {
-    border: 2px dashed magenta;
     background-image: url("images/about-me-desktop.png");
     background-position: 100% 45%;
   }
 
   .about-me-main {
-    border: maroon 2px dashed;
-    height: 80%;
-    
+    height: 85%;
   }
 
   .about-me-p {
@@ -808,12 +776,11 @@ line-height: 24px;
   }
   .line-division-aboutme-desk {
     width: 100%;
-    height: 2%;
+    height: 1%;
     margin: 11% 0 0 0;
   }
 
   .about-me-technologies {
-    border: dashed red 2px;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -825,7 +792,6 @@ line-height: 24px;
 
   .contact-form {
     height: 40%;
-    margin: -10% 0 0 0;
   }
 
   .intro-contact-desktop {
@@ -852,7 +818,6 @@ line-height: 24px;
     }
 
     .icons-footer { 
-      border: olive 2px dashed;
       border-top: #DFE1E6 2px solid ;
       width: 100%;
       margin: 0 5% 0 0;
@@ -864,7 +829,6 @@ line-height: 24px;
     }
    
     .icons-desktop {
-      border: pink 2px dashed;
       width: 100%;
       margin: 10% 0 0 5%;
      
