--- a/style.css
+++ b/style.css
@@ -167,7 +167,6 @@ header > i {
   margin: 24px 24px 0 24px;
   background-image: url("images/card-image/u-image-card.svg");
   background-repeat: no-repeat;
-  border: 2px solid black;
 }
 
 .u-card-h3 {
@@ -487,7 +486,7 @@ hr {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1100px) {
   .have2-hidden {
     display: none;
   }
@@ -622,9 +621,12 @@ hr {
   }
 
   .card-img-size {
-    margin: 0 24px 0 0;
     width: 100%;
     height: 100%;
+  }
+
+  .card1-img-container {
+    margin: 0 4% 0 0;
   }
 
   .container-info-card1 {
@@ -658,14 +660,17 @@ hr {
   .container-grid-pworks {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 37px 24px;
-    margin: 0 3% 0 3%;
   }
 
   .card-row2 {
     background-size: 100%;
     background-image: url("images/card-image/card-image-desk/card-2.png");
-    background-position: center bottom;
+    background-position: center top;
+  }
+
+  .card-row2:hover {
+    border: solid 2px black;
+    cursor: pointer;
   }
 
   .u-button-card {
@@ -675,7 +680,7 @@ hr {
   }
 
   .card-row3 {
-    background-position: center bottom;
+    background-position: center top;
     background-size: 110%;
     background-image: url("images/card-image/card-image-desk/calendar.png");
   }
