--- a/style.css
+++ b/style.css
@@ -181,7 +181,13 @@ header > i {
   border: firebrick 2px dashed;
 }
 
-.card-row2 {
+.card-row2,
+.card-row3,
+.card-row4,
+.card-row5,
+.card-row6,
+.card-row7,
+.card-row8 {
   padding: 1px 0 0 0;
   position: relative;
   background-image: url("images/card-image/u-image-card.svg");
@@ -243,73 +249,6 @@ header > i {
   padding: 12px;
   margin: 30px 0 0 0;
   background-color: #ff6b00;
-}
-
-.card-row3 {
-  padding: 1px 0 0 0;
-  margin: 0;
-  background-image: url("images/card-image/u-image-card.svg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  border: 2px dashed purple;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.card-row4 {
-  padding: 1px 0 0 0;
-  height: 410px;
-  margin: 0;
-  background-image: url("images/card-image/u-image-card.svg");
-  background-repeat: no-repeat;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.card-row4 {
-}
-
-.card-row5 {
-  padding: 1px 0 0 0;
-  height: 410px;
-  margin: 0;
-  background-image: url("images/card-image/u-image-card.svg");
-  background-repeat: no-repeat;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.card-row6 {
-  padding: 1px 0 0 0;
-  height: 410px;
-  margin: 0;
-  background-image: url("images/card-image/u-image-card.svg");
-  background-repeat: no-repeat;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.card-row7 {
-  padding: 1px 0 0 0;
-  height: 410px;
-  margin: 0;
-  background-image: url("images/card-image/u-image-card.svg");
-  background-repeat: no-repeat;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.card-row8 {
-  padding: 1px 0 0 0;
-  height: 410px;
-  margin: 24px 24px 0 24px;
-  background-image: url("images/card-image/u-image-card.svg");
-  background-repeat: no-repeat;
 }
 
 .about-me-main {
@@ -529,7 +468,7 @@ hr {
   }
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 992px) {
   .have2-hidden {
     display: none;
   }
@@ -711,7 +650,7 @@ hr {
   .card-row2 {
     background-size: cover;
     background-position: center;
-    background-image: url("images/card-image/card-image-desk/card-2.png");
+    background-image: url("images/card-image/card-image-desk/card2-shadow.png");
     background-position: center;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
