--- a/style.css
+++ b/style.css
@@ -496,6 +496,12 @@ hr {
     font-size: 15px;
     line-height: 20px;
     color: #fff;
+    
+  }
+
+   a {
+    text-decoration: none;
+    color: white;
   }
 
   .header-menu li {
