--- a/style.css
+++ b/style.css
@@ -164,14 +164,11 @@ header > i {
   font-weight: bold;
   font-size: 17px;
   line-height: 24px;
-  color: #fff;
+  color: rgb(49, 68, 121);
   border: none;
   padding: 12px;
   margin: 24px 0 0 0;
   background-color: #ff6b00;
-
-  -webkit-text-stroke: 1px black;
-  /* color: transparent; */
 }
 
 .container-grid-pworks {
@@ -242,7 +239,7 @@ header > i {
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
-  color: #ffff;
+  color: rgb(49, 68, 121);
   border: none;
   width: 100%;
   padding: 12px;
