--- a/style.css
+++ b/style.css
@@ -162,9 +162,9 @@ header > i {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: bold;
-  font-size: 17px;
+  font-size: 22px;
   line-height: 24px;
-  color: rgb(49, 68, 121);
+  color: #fff;
   border: none;
   padding: 12px;
   margin: 24px 0 0 0;
@@ -237,9 +237,9 @@ header > i {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 17px;
+  font-size: 22px;
   line-height: 24px;
-  color: rgb(49, 68, 121);
+  color: #ffff;
   border: none;
   width: 100%;
   padding: 12px;
