--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ header > i {
   font-weight: 700;
   font-size: 22px;
   line-height: 24px;
-  color: #ffff;
+  color: #1E1E1E;
   border: none;
   width: 100%;
   padding: 12px;
