--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ header > i {
   font-weight: bold;
   font-size: 22px;
   line-height: 24px;
-  color: #fff;
+  color: #1E1E1E;
   border: none;
   padding: 12px;
   margin: 24px 0 0 0;
@@ -287,7 +287,7 @@ header > i {
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
-  color: #fff;
+  color: #1E1E1E;
   border: none;
   width: 161px;
   height: 48px;
