Changed fonto color to adjust the contrast

--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ header > i {
 }
 
 button:hover {
-  color: #f55800;
+  color: #AA4711;
   background-color: #fff5e1;
   border: 1px solid #f55800;
 }
