--- a/style.css
+++ b/style.css
@@ -858,7 +858,7 @@ button:active {
 
 .overlay-content {
   margin: 100px 0 0 0;
-  padding: 0 24px 0 24px
+  padding: 0 24px 0 24px;
   scroll-behavior: smooth;
 }
 
